<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test_RemoteController</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="socket_connect">Connect</string>
    <string name="socket_disconnect">Disconnect</string>
    <string name="start_session">Start Session</string>
    <string name="stop_session">Stop Session</string>
    
    <string name="capture">Capture</string>
    <string name="start_record">Start Record</string>
    <string name="stop_record">Stop Record</string>
    <string name="settings">Settings</string>
    
    <string name="pwd">PWD</string>
    <string name="cd">CD</string>
    <string name="ls">LS</string>
    <string name="file_manager">File Manager</string>
    
    <string name="back_to_previous">Back</string>

</resources>
