<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_socket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/socket_connect" />
    
    <Button
        android:id="@+id/btn_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_session"
        android:layout_toRightOf="@id/btn_socket" />
    
    <RelativeLayout 
        android:id="@+id/layout_control_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_socket" >
	    
	    <Button
	        android:id="@+id/btn_capture"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/capture" />
	    
	    <Button
	        android:id="@+id/btn_record"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/start_record"
	        android:layout_toRightOf="@id/btn_capture" />
	    
	    <Button
	        android:id="@+id/btn_settings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/settings"
	        android:textStyle="bold"
	        android:layout_toRightOf="@id/btn_record" />
	    
	    <EditText 
	        android:id="@+id/et_cd"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/btn_capture"
	        android:inputType="text" />
	    
	    <Button
	        android:id="@+id/btn_pwd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/pwd"
	        android:layout_below="@id/et_cd" />
	    
	    <Button
	        android:id="@+id/btn_cd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cd"
	        android:layout_below="@id/et_cd"
	        android:layout_toRightOf="@id/btn_pwd" />
	    
	    <Button
	        android:id="@+id/btn_ls"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ls"
	        android:layout_below="@id/et_cd"
	        android:layout_toRightOf="@id/btn_cd"  />
	    
	    <Button
	        android:id="@+id/btn_file_manager"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/file_manager"
	        android:textStyle="bold"
	        android:layout_below="@id/et_cd"
	        android:layout_toRightOf="@id/btn_ls"  />
	    
    </RelativeLayout>
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_control_btns" >
	    <TextView
	    	android:id="@+id/tv_show_info"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/hello_world" />
    </ScrollView>
    
</RelativeLayout>
